# leanlm

./: .gitignore  README.md  chat_export  client.py  compress_calculator  convert_checkpoint.py  download_checkpoint.py  download_huggingface.py  download_huggingface_calculator.py  environment.yml  environment_Darwin_24.6.0_arm64.yml  environment_Linux_5.19.0-45-generic_x86_64.yml  install_requirements  llm_chat.py  llm_chat_mlx.py  log_qwen35_4b_p01_l4096_b256_lora_select1ngpus8.o158145  mamba_export  oai_server.py  pyproject.toml  run_eval.py  run_eval_mlx.py  show_pbs_nodes  submit_pbs.py  submit_pbs_job.py  submit_pbs_multi_node.py  test  test.py  test_calculator.py  test_generic_grpo.py  test_pbs  tg_bot_noti  tg_send  train_calculator  train_calculator_deepseekr1_7b_lora  train_calculator_local  train_calculator_multinode  train_calculator_pbs  train_calculator_qwen35_08b_lora  train_calculator_qwen35_08b_phoenix  train_calculator_qwen35_4b_fft  (+8 more)
assets/: train_dataset_llama2.jsonl
environment/: mamba_Darwin_24.6.0_arm64.yml  mamba_Linux_6.14.0-63.fc42.aarch64_aarch64.yml  uv_Darwin_24.6.0_arm64.txt  uv_Linux_6.14.0-63.fc42.aarch64_aarch64.txt
examples/: demo_lean4.py
examples/lean_dojo/: constants.py
lab/: demo_lean4.py  pyproject.toml  rollout_example.py  test.py
lab/lean_dojo_v2/lean_dojo/data_extraction/: trace.py
lab/lean_dojo_v2/utils/: constants.py
lean_llm/: arithmetic.py  processor.py  run_train_calculator.py  train_calculator.py  trainer.py
leanlm/: arithmetic.py  llm_chat.py  model.py  run_train_calculator.py
leanlm/arithmetic/: arithmetic.py
leanlm/env_trainer/: batch_rollout.py  environment.py  model.py  rollout.py  rollout_batch.py  rollout_single.py  trainer.py  trainer_config.py  trainer_util.py
leanlm/env_trainer_recipes/: qwen35_08b_l4096_b32_lora_gcd.py  qwen35_08b_l4096_b32_lora_gcd_test.py  qwen35_08b_tl256_cl1024_b4_lora_guess.py  qwen35_08b_tl256_cl4096_b32_lora_guess.py  qwen35_4b_l4096_b32_lora_gcd.py  qwen35_4b_tl1024_cl16384_b32_lora_gcd.py  qwen35_4b_tl256_cl4096_b32_lora_guess.py
leanlm/grpo_trainer/: environment.py  example.py  processor.py  rollout.py
leanlm/llm_engine/: client.py  engine.py
leanlm/llm_trainer/: dataset.py  processor.py  trainer.py
leanlm/llm_trainer_recipes/: qwen35_4b_p02_lora.py
leanlm/mini_racer_util/: mini_racer_util.py
leanlm/recipes/: deepseekr1_7b_lora.py  gemma4_e2b_ti_lora.py  gemma4_e2b_ti_p02_lora.py  qwen35_08b_lora.py  qwen35_08b_phoenix.py  qwen35_4b.py  (+23 more)
llm_engine/: api.py  chat_completion.py  client.py  consumer.py  engine.py  oai_api.py  oai_server.py  server.py  streamer.py
llm_trainer/: trainer.py
log/: .run_qwen35_4b_p02_lora_select1ngpus2.log.swp
obsolete/: dtype.py  example1.json  example2.json  example3.json  get_log_path_from_config.py  processor.py  recipe.py  run_eval  run_eval.py  run_train_lm  run_train_lm.py
recipes/: deepseek_r1_7b.py  gemma4_e2b.py  qwen35_4b.py
(+7 files in other folders)
