[project]
name = "leanlm"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=3.6.0",
    "jiwer>=4.0.0",
    "moka-py>=0.3.0",
    "peft>=0.18.1",
    "pydantic>=2.12.5",
    "torch>=2.11.0",
    "transformers>=5.5.3",
    "kernels>=0.13.0",
    "python-dotenv>=1.2.2",
    "trl>=0.29.1",
    "mlx-lm>=0.31.2",
    "accelerate>=1.13.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

