[project]
name = "lab"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch>=1.12.0",
    "pytorch-lightning[extra]>=1.9.0",
    "transformers>=4.20.0",
    "numpy>=1.21.0",
    "deepspeed>=0.7.0",
    "loguru>=0.6.0",
    "networkx>=2.8.0",
    "ray>=2.0.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "openai>=0.27.0",
    "python-dotenv>=0.19.0",
    "rank-bm25>=0.2.2",
    "torchmetrics>=0.9.0",
    "gitpython>=3.1.0",
    "pexpect>=4.8.0",
    "toml>=0.10.0",
    "PyGithub>=1.58.0",
    "lxml>=4.9.0",
    "filelock>=3.8.0",
    "psutil>=5.9.0",
    "datasets>=4.0.0",
    "trl>=0.25.1",
    "peft>=0.17.0",
]
